<resources>
    <string name="app_name">SecurityApp</string>
    <string name="your_perfect_online_escort">Your Perfect \nOnline Escort</string>
    <string name="escorting_you_to_start_hub_so_you_don_t_lost">Escorting you to start \nhub so you don\'t lost</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password_main">Confirm Password</string>
    <string name="linked_email">Please enter the email address your \ninformation was linked to</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_new_entry">Sign in</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sihw">SIHW</string>
    <string name="animinate_the_screen">Animinate the screen</string>
    <string name="onboarding_title1">Link your emergency \ncontacts easily</string>
    <string name="onboarding_description1">Your favourite people can be updated of your whereabout in one click</string>
    <string name="get_started">Get started</string>
    <string name="never_feel_lonely_anymore_or_walk_alone_as_we_ensure_you_feel_safe">Never Feel Lonely Anymore Or Walk Alone As We Ensure You Feel Safe</string>
    <string name="onboarding_description2">You get real time location with trusted contact in case of a panic situation</string>
    <string name="onboarding_description3">Prepare and prevent instead of repair and regret,Put safety in every slide</string>
    <string name="onboarding_title2">Share your live location \nat a go</string>
    <string name="onboarding_title3">Activate an SOS alert \nin one click</string>
    <string name="full_name">full name</string>
    <string name="state_of_origin">State of origin</string>
    <string name="Date">Date of birth</string>
    <string name="Contact">Phone number</string>
    <string name="NIN">National ID(NIN)</string>
    <string name="address">Address</string>
    <string name="City">City of Residence</string>
    <string name="submit">Submit</string>
    <string name="password">Forgot password</string>
    <string name="email">Enter email address</string>
    <string name="send_link">Send link</string>
    <string name="confirm_end_of_session">Confirm end of session</string>
    <string name="code">Please enter the 4 digit code sent to your mail</string>
    <string name="extend_time_of_guard_session">Extend time of guard session</string>
    <string name="session">The time duration you set for your session has elasped. Will you likean extension of your guard session?</string>
    <string name="your_guard_session_has_come_to_an_end">Your guard session has come to an end</string>
    <string name="pager_view">pager view</string>
    <string name="tab_layout">tab layout</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="extension">The time duration for your session has elapsed. Will you like an extension of your guard?</string>
    <string name="search">Search Previous guard</string>
    <string name="Safety">Safety first is safety always</string>
    <string name="discard">Do you wish to keep the information of the guard session or you would rather discard it</string>
    <string name="deleted">This guard session has been deleted successfully</string>
    <string name="saved">You can always find the guard information in your recent/previous guard session</string>
    <string name="confirm">Your guard information has been saved</string>
    <string name="done">Done</string>
    <string name="item_label">E.g Event</string>
    <string name="book_now">Book now</string>
    <string name="safety">Safety first is \nsafety always</string>
    <string name="recent">Recent Guard</string>
    <string name="peace_james">Peace James</string>
    <string name="destination">Destination</string>
    <string name="select_date">Select Date</string>
    <string name="add_emergency_contact">Add emergency contact</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="login">Login</string>
    <string name="duration">06,Apr,08:32 AM</string>
</resources>