<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="Home" />

    <item
        android:id="@+id/guardFragment"
        android:icon="@drawable/guard"
        android:title="Guard" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/notification"
        android:title="Notification" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="Profile" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


</menu>