<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.informationSaved.InformationSavedFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="269dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/check_mark" />

        <TextView
            android:id="@+id/txView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/urbanist_extrabold"
            android:gravity="center"
            android:text="@string/confirm"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/urbanist_extrabold"
            android:gravity="center"
            android:text="@string/saved"
            android:textSize="20sp"
            android:textStyle="normal" />
    </RadioGroup>

    <Button
        android:id="@+id/button5"
        android:layout_width="187dp"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_shape"
        android:padding="20dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>