<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".mainActivity.MyProfileFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/shift"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cmView1"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cmView2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/shape"
        android:src="@drawable/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </de.hdodenhof.circleimageview.CircleImageView>

    <EditText
        android:id="@+id/etView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:padding="11dp"
        android:background="@drawable/border_sign_up"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmView1" />

    <EditText
        android:id="@+id/etView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:padding="11dp"
        android:background="@drawable/border_sign_up"
        android:inputType="textPersonName"
        android:hint="@string/state_of_origin"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etView1" />

    <EditText
        android:id="@+id/etView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:padding="11dp"
        android:background="@drawable/border_sign_up"
        android:inputType="textPersonName"
        android:hint="@string/Date"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etView2" />

    <EditText
        android:id="@+id/etView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:padding="11dp"
        android:background="@drawable/border_sign_up"
        android:inputType="textPersonName"
        android:hint="@string/Contact"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etView3" />

    <EditText
        android:id="@+id/etView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:padding="11dp"
        android:background="@drawable/border_sign_up"
        android:inputType="textPersonName"
        android:hint="@string/NIN"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etView4" />

    <EditText
        android:id="@+id/etView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:padding="11dp"
        android:background="@drawable/border_sign_up"
        android:inputType="textPersonName"
        android:hint="@string/address"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etView5" />

    <EditText
        android:id="@+id/etView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:padding="11dp"
        android:background="@drawable/border_sign_up"
        android:inputType="textPersonName"
        android:hint="@string/City"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etView6" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:text="@string/submit"
        android:padding="15dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/etView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>