<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/color"
    tools:context=".mainActivity.ForgotPassword">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            android:text="@string/linked_email"
            android:layout_marginTop="170dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_sign_up"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:hint="example@gmail.com"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/SendBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:text="@string/send_link"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SendBTN"
            app:srcCompat="@drawable/circle_arrow"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back to login"
            android:textColor="#721183"
            android:textStyle="bold"
            android:layout_marginTop="55dp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/SendBTN" />

    </androidx.constraintlayout.widget.ConstraintLayout>

