<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainActivity.DashboardFragment">


    <TextView
        android:id="@+id/etTEXT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sihw"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="#2E1136"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTEXT2"
        android:layout_width="367dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/search"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTEXT1" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="26dp"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/search_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTEXT1" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="360dp"
        android:layout_height="132dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etTEXT2">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/safety"
            android:textColor="#2E1136"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_shape"
            android:text="Book now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="131dp"
            android:layout_height="116dp"
            android:layout_marginStart="72dp"
            android:src="@drawable/location_tracking"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="134dp"
        android:text="@string/recent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#2E1136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recentGuardRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />






</androidx.constraintlayout.widget.ConstraintLayout>




